# seng

./: .gitignore  CONTRIBUTING.md  README.md  bot.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pylint.yml
cogs/: channel_stats.py  error_handler.py  greetings.py  hall_of_stars.py  help.py  member_roles.py  member_stats.py  mute_member.py  processes.py  send_welcome.py  seng_info.py  validation.py
config/: create_data_pack.py  decrypt_data_pack.sh  encrypt_data_pack.sh  file_check.py  jumpstart.py  load_data_pack.py  load_template_files.py
config/template_files/private/: priv_data.json
config/template_files/server_specific/: channel_ids.json  moderators.txt
